refactored code and tests